Fixed spacing between intro
Changed spacing between intro text and slideshow

--- a/style.css
+++ b/style.css
@@ -66,6 +66,21 @@ font-size: 42px;
 margin-top: -110px;
 }
 
+@media (max-width:1640px){
+  .introtext{
+    padding-right:100px;
+    
+    
+  }
+}
+@media (max-width:1380px){
+  .introtext{
+    padding-right:12px;
+    
+    
+  }
+}
+
 @media (max-width:1450px){
   .tabNames{
     padding-left:30%;
@@ -164,6 +179,7 @@ li a {
   font-size:50px;
   text-decoration: underline;
   color:#262262;
+  
 
 }
 .introtext2{
@@ -974,6 +990,7 @@ footer{
   width:100%;
   margin-top:-40px;
   font-size:46px;
+  
 }
 
 .newlevel{
